fix(user): prevent profile pic squeeze on small screens

--- a/src/app/user-details/user-details.component.css
+++ b/src/app/user-details/user-details.component.css
@@ -54,6 +54,7 @@
     .profile-pic {
         height: 100px;
         width: 100px;
+        flex: 0 0 100px;
     }
 
     #info-header {
